refactor adding objects into a common package

--- a/static/javascripts/team/team_list_view.html
+++ b/static/javascripts/team/team_list_view.html
@@ -1,2 +1,2 @@
-<div add-user-directive></div>
+<div add-directive controller-name="addTeamController" add-type="Team"></div>
 <div team-table-directive></div>
