--- a/static/javascripts/user/team_detail_view.html
+++ b/static/javascripts/user/team_detail_view.html
@@ -1,2 +1,2 @@
-<div add-user-directive></div>
+<div add-directive controller-name="addUserController" add-type="User"></div>
 <div user-table-directive></div>
