--- a/static/javascripts/common/add_modal.html
+++ b/static/javascripts/common/add_modal.html
@@ -1,6 +1,6 @@
 <div id="myModalContent.html">
     <div class="modal-header">
-        <h3 class="modal-title">Enter User Information</h3>
+        <h3 class="modal-title">{{title}}</h3>
     </div>
     <div class="modal-body">
         <div class="form-group" ng-repeat="field in fields">
