--- a/static/javascripts/team/team_table.html
+++ b/static/javascripts/team/team_table.html
@@ -10,7 +10,7 @@
 		<tr ng-repeat="team in teams">
 			<td>{{team.name}}</td>
 			<td><a ui-sref="user({team_id: team.id})">View</a> </td>
-			<td><a ui-sref="/team/{{team.id}}/questions/">View</a> </td>
+			<td><a ui-sref="question({team_id: team.id})">View</a> </td>
 			<td><button class = "btn btn-sm btn-danger">Delete</button></td>
 		</tr>
 		</tbody>
