--- a/static/javascripts/user/user_table.html
+++ b/static/javascripts/user/user_table.html
@@ -1,5 +1,5 @@
 <div>
-	<table st-table="rowCollection" class="table table-striped">
+	<table st-table="users" class="table table-striped">
 		<thead>
 		<th>First Name</th>
 		<th>Last Name</th>
