--- a/static/javascripts/user/user_table.html
+++ b/static/javascripts/user/user_table.html
@@ -4,6 +4,7 @@
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Email</th>
+		<th>Roles</th>
 		<th>Remove</th>
 		</thead>
 		<tbody>
@@ -11,6 +12,7 @@
 			<td>{{user.first_name}}</td>
 			<td>{{user.last_name}}</td>
 			<td>{{user.email}}</td>
+			<td>ROLES HERE</td>
 			<td><button class = "btn btn-sm btn-danger">Delete</button></td>
 		</tr>
 		</tbody>
