add roles api endpoint.  added fixture (need to make automatic on db init) to populate roles with our current options, contributor (minion) and/or stakeholder. fix team saving

--- a/static/javascripts/team/team_table.html
+++ b/static/javascripts/team/team_table.html
@@ -4,7 +4,7 @@
 		<th>Name</th>
 		<th>View Users</th>
 		<th>View Team Questions</th>
-		<th>Role</th>
+		<th>Your Role</th>
 		<th>Delete</th>
 		</thead>
 		<tbody>
