--- a/static/javascripts/user/user_table.html
+++ b/static/javascripts/user/user_table.html
@@ -4,7 +4,7 @@
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Email</th>
-		<th>Roles</th>
+		<th>User Roles</th>
 		<th>Remove</th>
 		</thead>
 		<tbody>
