--- a/static/javascripts/team/team_table.html
+++ b/static/javascripts/team/team_table.html
@@ -11,7 +11,7 @@
 		<tr ng-repeat="team in teams">
 			<td>{{team.name}}</td>
 			<td><a ui-sref="user({team_id: team.id})">View</a> </td>
-			<td><a ui-sref="question({team_id: team.id})">View</a> </td>
+			<td><a ui-sref="report({team_id: team.id})">View</a> </td>
 			<td>ROLE HERE (admin or minion)</td>
 			<td><button class = "btn btn-sm btn-danger">Delete</button></td>
 		</tr>
