--- a/static/javascripts/common/add_modal.html
+++ b/static/javascripts/common/add_modal.html
@@ -9,6 +9,14 @@
                 <div ng-switch-when="multiselect">
                     <multiselect data-multiple="true" options="c.name for c in field.options" data-compare-by="id" ng-model="field.value"></multiselect>
                 </div>
+                <div ng-switch-when="checkbox">
+                    <div class="btn-group">
+                        <label ng-repeat="opt in field.options" ng-model="field.value[opt.id]" class="btn btn-primary" uib-btn-checkbox>{{opt.name}}</label>
+                    </div>
+                </div>
+                <div ng-switch-when="timepicker">
+                    <uib-timepicker ng-model="field.value" hour-step="hstep" minute-step="mstep" show-meridian="true"></uib-timepicker>
+                </div>
                 <div ng-switch-default>
                     <input id="{{field.name}}" class="form-control" type="{{field.type}}" ng-model="field.value"/>
                 </div>
