--- a/static/javascripts/user/user_table.html
+++ b/static/javascripts/user/user_table.html
@@ -13,7 +13,7 @@
 			<td>{{user.last_name}}</td>
 			<td>{{user.email}}</td>
 			<td><div ng-repeat="role in user.roles">{{role.name}}</div></td>
-			<td><button ng-click="userService.delete(team_id, user.id)" class = "btn btn-sm btn-danger">Delete</button></td>
+			<td><button ng-click="userService.delete(user.id)" class = "btn btn-sm btn-danger">Delete</button></td>
 		</tr>
 		</tbody>
 	</table>
