fix show modal controller and user controller / fixed adding users to the team

--- a/static/javascripts/common/add.html
+++ b/static/javascripts/common/add.html
@@ -1,4 +1,4 @@
-<button type="button" ng-click="self.showAddModal()" class="btn btn-sm btn-success">
+<button type="button" ng-click="showAddModal()" class="btn btn-sm btn-success">
 	<i class="glyphicon glyphicon-plus">
 	</i> Add {{addType}}
 </button>
